--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,38 +126,35 @@
     <div class="subtitle" >
       新規投稿商品
     </div>
+
     <ul class='item-lists'>
-
       <% @items.each do |item| %>
-      <li class='list'>
-        <%= link_to item_path(item.id) do %>
-        <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img" %>
-
-          <%# 商品が売れていればsold outを表示しましょう %>
-          <%# if item.purchase.present?  %>
-            <%#div class='sold-out'>
-              <span>Sold Out!!</#span>
-            </#div>
-          <%# end %>
-          <%# //商品が売れていればsold outを表示しましょう %>
-
-        </div>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            <%= item.item_name %>
-          </h3>
-          <div class='item-price'>
-            <span><%= item.price %>円<br><%= item.shipping_cost_bearer[:name] %></span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
-              <span class='star-count'>0</span>
+        <li class='list'>
+          <%= link_to item_path(item.id) do %>
+            <div class='item-img-content'>
+              <%= image_tag item.image, class: "item-img" %>
+              <% if item.purchase.present? %>
+              <div class='sold-out'>
+                <span>Sold Out!!</#span>
+              </div>
+              <% end %>
             </div>
-          </div>
-        </div>
-        <% end %>
-      </li>
+            <div class='item-info'>
+              <h3 class='item-name'>
+                <%= item.item_name %>
+              </h3>
+              <div class='item-price'>
+                <span><%= item.price %>円<br><%= item.shipping_cost_bearer[:name] %></span>
+                <div class='star-btn'>
+                  <%= image_tag "star.png", class:"star-icon" %>
+                  <span class='star-count'>0</span>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </li>
       <% end %>
+
 
       <% if @items[0] == nil %>
       <li class='list'>
